Format files in web-apps to resemble individual projects

--- a/web-apps/templates/playlister/index.html
+++ b/web-apps/templates/playlister/index.html
@@ -1,4 +1,4 @@
-{% extends "playlister/layout.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
     juiceellish
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="container">
             <img src="{{ url_for('static', filename='playlister/images/4390.png') }}" alt="Deathbat #4390" height="200" width="200">
-            <p>Loading<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></p>
+            <p>Loading Playlister<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></p>
         </div>
     </div>
 {% endblock %}
