--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -23,10 +23,10 @@
     <script src="https://kit.fontawesome.com/092a914cad.js" crossorigin="anonymous"></script>
 
     <!-- Custom styles -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='playlister/styles.css') }}">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/4390.png') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='playlister/images/4390.png') }}">
 
     <title>{% block title %}{% endblock %}</title>
 </head>
