Create portfolio homepage; linked to application homepage

--- a/web-apps/templates/index.html
+++ b/web-apps/templates/index.html
@@ -9,6 +9,7 @@
         <div class="container">
             <img src="{{ url_for('static', filename='playlister/images/4390.png') }}" alt="Deathbat #4390" height="200" width="200">
             <p>Loading<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></p>
+            <a href="{{ url_for('playlister_index') }}">Playlister Home</a>
         </div>
     </div>
 {% endblock %}
