--- a/web-apps/templates/playlister/index.html
+++ b/web-apps/templates/playlister/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "playlister/layout.html" %}
 
 {% block title %}
     juiceellish
@@ -9,6 +9,7 @@
         <div class="container">
             <img src="{{ url_for('static', filename='playlister/images/4390.png') }}" alt="Deathbat #4390" height="200" width="200">
             <p>Loading Playlister<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></p>
+            <a href="{{ url_for('home') }}">Home</a>
         </div>
     </div>
 {% endblock %}
