Reconfigured templates to separate homepage from playlister app

--- a/web-apps/templates/index.html
+++ b/web-apps/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "playlister/layout.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
     juiceellish
@@ -7,9 +7,9 @@
 {% block main %}
     <div class="container-fluid">
         <div class="container">
-            <img src="{{ url_for('static', filename='playlister/images/4390.png') }}" alt="Deathbat #4390" height="200" width="200">
+            <img src="{{ url_for('static', filename='images/4390.png') }}" alt="Deathbat #4390" height="200" width="200">
             <p>Loading<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></p>
-            <a href="{{ url_for('playlister_index') }}">Playlister Home</a>
+            <a href="{{ url_for('playlister_index') }}">Playlister</a>
         </div>
     </div>
 {% endblock %}
