--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Create Spotify playlists with eaze. Manually fine-tune your creation or let AI do the work for you.">
+        content="Create Spotify playlists with ease. Manually fine-tune your creation or let AI do the work for you.">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.juiceellish.dev">
