Interact with Spotify OAuth; display user profile info

--- a/web-apps/templates/playlister/index.html
+++ b/web-apps/templates/playlister/index.html
@@ -5,11 +5,17 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container-fluid">
-        <div class="container">
-            <img src="{{ url_for('static', filename='playlister/images/4390.png') }}" alt="Deathbat #4390" height="200" width="200">
-            <p>Loading Playlister<span class="ellipsis"><span>.</span><span>.</span><span>.</span></span></p>
-            <a href="{{ url_for('home') }}">Home</a>
-        </div>
-    </div>
+    <h1>Display your Spotify profile data</h1>
+
+    <section id="profile">
+        <h2>Logged in as <span id="displayName">{{ profile['display_name'] }}</span></h2>
+        <span id="avatar"></span>
+        <ul>
+            <li>User ID: <span id="id">{{ profile['id'] }}</span></li>
+            <li>Email: <span id="email">{{ profile['email'] }}</span></li>
+            <li>Spotify URI: <a href="{{ profile['uri'] }}" id="url">My Spotify Profile</a></li>
+            <li>Profile Image 1: <span id="imgUrl"><img src="{{ profile['images'][0]['url'] }}" alt="Profile Image 1"></span></li>
+            <li>Profile Image 2: <span id="imgUrl"><img src="{{ profile['images'][1]['url'] }}" alt="Profile Image 2"></span></li>
+        </ul>
+    </section>
 {% endblock %}
