--- a/web-apps/templates/playlister/playlist.html
+++ b/web-apps/templates/playlister/playlist.html
@@ -14,7 +14,7 @@
             <li>{{ name }}</li>
             <li>{{ description }}</li>
             <ul>
-                {% for track in all_tracks: %}
+                {% for track in all_track_names: %}
                     <li>{{ track }}</li>
                 {% endfor %}
             </ul>
