--- a/web-apps/static/playlister/styles.css
+++ b/web-apps/static/playlister/styles.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 body {
-    font-family: "cubano", sans-serif;
+    font-family: 'cubano', sans-serif;
     height: 100%;
     background-color: #1d1d1f;
     color: #f5f5f7;
