--- a/web-apps/templates/playlister/playlist.html
+++ b/web-apps/templates/playlister/playlist.html
@@ -5,9 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <section id="profile">
-        <h2>Logged in as <span id="displayName">{{ username }}</span></h2>
-        <span id="avatar"></span>
+    <section>
         <ul>
             <li><img src="{{ image }}" alt="Playlist Cover Image" height="400" width="400"></li>
             <!-- SIZE DEPENDS ON DEVICE; DESIGN FOR MOBILE -->
