--- a/web-apps/static/playlister/styles.css
+++ b/web-apps/static/playlister/styles.css
@@ -5,45 +5,21 @@
     padding: 0;
 }
 body {
-    font-family: 'cubano', sans-serif;
+    background-color: #212529;
+    color: #F8F9FA;
+    font-family: 'bryant', sans-serif;
+    font-weight: 400;
     height: 100%;
-    background-color: #1d1d1f;
-    color: #f5f5f7;
+    letter-spacing: .08rem;
 }
-
-p {
-    line-height: 1.5rem;
+.container-fluid {
+    padding-top: 12px;
 }
-.ellipsis span {
-    opacity: 0;
-    animation: ellipsis-dot 1s infinite;
+#pfp {
+    border-radius: 50%;
+    margin-right: .5rem;
 }
-.ellipsis span:nth-child(1) {
-    animation-delay: 0.0s;
-}
-.ellipsis span:nth-child(2) {
-    animation-delay: 0.1s;
-}
-.ellipsis span:nth-child(3) {
-    animation-delay: 0.2s;
-}
-@keyframes ellipsis-dot {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { opacity: 0; }
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    font-size: 3rem;
-    animation: floating 3s infinite ease-in-out;
-}
-@keyframes floating {
-    0% { transform: translate(0, 0px); }
-    50% {  transform: translate(0, 15px); }
-    100% { transform: translate(0, -0px); }
+#card {
+    border-color: #54E1FA;
+    color: #F8F9FA;
 }
