--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -32,19 +32,15 @@
 </head>
  
 <body>
-
-    <nav class="bg-dark navbar navbar-dark sticky-top">
-        <div class="container-fluid">
+    <!-- STYLE LIKE NEUMORPHISM OFFCANVAS AND ARROW -->
+    <nav class="bg-dark navbar navbar-dark d-flex">
+        <div class="container-fluid d-flex">
             <a href="/playlister/index" class="navbar-brand">
                 <img src="{{ url_for('static', filename='playlister/images/playlister_word.svg') }}" alt="Playlister Logo" height="200">
             </a>
-            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav me-auto mt-2">
-                    <li class="nav-item"><a class="nav-link" href="/playlister/logout">Logout</a></li>
-                </ul>
+            <div>
+                <img id="pfp" src="{{ sm_image }}" alt="{{ username }} Profile Picture" class="d-inline-block">
+                {{ username }}
             </div>
         </div>
     </nav>
@@ -57,14 +53,12 @@
     </header>
     {% endif %}
 
-    <main class="container-fluid py-5">
+    <main class="container-fluid p-3 text-center">
         {% block main %}{% endblock %}
     </main>
 
-    <footer>
-        <div class="container-fluid mb-5" id="footer">
-            2023 &copy; juiceellish, LLC - Temporary footer
-        </div>
+    <footer class="mb-5 small text-center">
+        2023 &copy; juiceellish, LLC - Temporary footer
     </footer>
 </body>
 
