--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -36,7 +36,7 @@
     <nav class="bg-dark navbar navbar-dark d-flex">
         <div class="container-fluid d-flex">
             <a href="/playlister/index" class="navbar-brand">
-                <img src="{{ url_for('static', filename='playlister/images/playlister_word.svg') }}" alt="Playlister Logo" height="200">
+                <img src="{{ url_for('static', filename='playlister/images/playlister_word.svg') }}" alt="Playlister Logo" height="150">
             </a>
             <div>
                 <img id="pfp" src="{{ sm_image }}" alt="{{ username }} Profile Picture" class="d-inline-block">
@@ -53,11 +53,11 @@
     </header>
     {% endif %}
 
-    <main class="container-fluid p-3 text-center">
+    <main class="container-fluid text-center">
         {% block main %}{% endblock %}
     </main>
-
-    <footer class="mb-5 small text-center">
+    <hr class="my-hr">
+    <footer class="my-4 small text-center">
         2023 &copy; juiceellish, LLC - Temporary footer
     </footer>
 </body>
