--- a/web-apps/templates/playlister/index.html
+++ b/web-apps/templates/playlister/index.html
@@ -25,7 +25,11 @@
                     </a>
                     <!-- SIZE DEPENDS ON DEVICE; DESIGN FOR MOBILE -->
                     <div class="card-body mb-5">
-                        <h5 class="card-title">{{ playlist['name'] }}</h5>
+                        {% if playlist['tracks']['total'] == 0 %}
+                            <h5 class="card-title">EMPTY</h5>
+                        {% else %}
+                            <h5 class="card-title">{{ playlist['name'] }}</h5>
+                        {% endif %}
                     </div>
                 </div>
             </div>
