--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -34,9 +34,10 @@
 <body>
     <!-- STYLE LIKE NEUMORPHISM OFFCANVAS AND ARROW -->
     <nav class="bg-dark navbar navbar-dark d-flex">
-        <div class="container-fluid d-flex">
+        <div class="container-fluid d-flex" id="logo_div">
             <a href="/playlister/index" class="navbar-brand">
-                <img src="{{ url_for('static', filename='playlister/images/playlister_word.svg') }}" alt="Playlister Logo" height="150">
+                <img id="logo" src="{{ url_for('static', filename='playlister/images/playlister_word.svg') }}" alt="Playlister Logo">
+                <img id="beta" src="{{ url_for('static', filename='playlister/images/beta.svg') }}" alt="Beta Logo">
             </a>
             <div>
                 <img id="pfp" src="{{ sm_image }}" alt="{{ username }} Profile Picture" class="d-inline-block">
