--- a/web-apps/templates/playlister/edit_playlist.html
+++ b/web-apps/templates/playlister/edit_playlist.html
@@ -7,46 +7,87 @@
 {% block main %}
     <section>
         <div class="container-fluid d-flex flex-column align-items-center">
-            <div class="d-inline-flex flex-column justify-content-center align-items-center w-50">
-                {% if has_image == False %}
-                    <img src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Cover Image" height="400" width="400">
+            <form action="/playlister/edit_playlist" class="d-inline-flex flex-column justify-content-center align-items-center w-100" method="POST">
+                <div class="d-inline-flex flex-column justify-content-center align-items-center w-50">
+                    <div class="d-flex w-25">
+                        <!-- MAKE CANCEL BUTTON A MODAL -->
+                        <a class="btn btn-outline-danger flex-fill m-3" href="{{ url_for('playlister_playlist', playlist=name, id=id) }}">Cancel</a>
+                        <button class="btn btn-outline-info flex-fill m-3" type="submit">Save</button>
+                    </div>
+                    {% if has_image == False %}
+                        <img src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Cover Image" height="400" width="400">
+                    {% else %}
+                        <img src="{{ image }}" alt="Cover Image: {{ name }}" height="400" width="400">
+                    {% endif %}
+                    <div class="form-width m-3">
+                        <label for="coverImage" class="form-label text-color">Change Image</label>
+                        <input class="form-control" id="coverImage" name="cover_image" type="file">
+                    </div>
+                    <div class="form-width m-3">
+                        <input autocomplete="off" class="form-control" name="playlist_name" type="text" value="{{ name }}">
+                    </div>
+                    <div class="form-width m-3">
+                        <textarea autocomplete="off" class="form-control" name="playlist_desc">{{ description }}</textarea>
+                    </div>
+                </div>
+                <div class="w-100">
+                    <hr class="my-hr">
+                </div>
+                {% if not all_tracks %}
+                    <div class="d-flex justify-content-center w-25">
+                        <a class="btn btn-light" href="#">Add to this playlist</a>
+                    </div>
                 {% else %}
-                    <img src="{{ image }}" alt="Cover Image: {{ name }}" height="400" width="400">
-                {% endif %}
-                <div class="d-flex w-25">
-                    <a href="#" class="btn btn-outline-info flex-fill m-3">Edit</a>
-                    <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-outline-danger flex-fill m-3">
-                        {% if owner == username %}
-                            Delete
-                        {% else %}
-                            Unfollow
-                        {% endif %}
-                    </a>
-                </div>
-                <!-- SIZE DEPENDS ON DEVICE; DESIGN FOR MOBILE -->
-                <h3 class="mb-3">{{ name }}</h3>
-                <h5 class="mb-3">{{ description }}</h5>
-            </div>
-            <div class="w-100">
-                <hr class="my-hr">
-            </div>
-            {% if not all_tracks %}
-                <div class="d-flex justify-content-center w-25">
-                    <a class="btn btn-light " href="#">Add to this playlist</a>
-                </div>
-            {% else %}
-                <div class="d-flex w-25"></div>
-                    <ol id="songs">
-                        {% for track in all_tracks: %}
-                        <li>{{ track['track_name'] }}</li>
-                        <ul>
-                            <li>{{ track['artist_name'] }}</li>
-                            <li>{{ track['track_album_cover'] }}</li>
-                        </ul>
+                    <div class="d-flex flex-column w-50">
+                        {% for track in all_tracks %}
+                            <div class="d-flex flex-row" id="songs">
+                                <div class="d-flex flex-column justify-content-center form-check form-switch">
+                                    <input class="form-check-input" name="{{ track['track_id'] }}" type="checkbox" role="switch">
+                                </div>
+                                <img class="d-inline py-2 pe-3" src="{{ track['track_album_cover'] }}" alt="{{ track['track_name'] }} Album Cover">
+                                <div class="d-flex flex-column justify-content-center">
+                                    <div class="d-block">{{ track['track_name'] }}</div>
+                                    <div class="d-block" id="artist">{{ track['artist_name'] }}</div>
+                                </div>
+                            </div>
+                            <hr>
                         {% endfor %}
-                    </ol>
+                    </div>
+                {% endif %}
+            </form>
+            <!-- 'Delete playlist' modal -->
+            <div aria-hidden="true" aria-labelledby="confirmation" class="modal fade" id="deleteModal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="confirmation">Confirmation</h1>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to delete this playlist?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-danger">Delete</a>
+                        </div>
+                    </div>
                 </div>
-            {% endif %}
+            </div>
+            <!-- JavaScript for Bootstrap modals -->
+            <script>
+                const deleteButton = document.getElementById('deleteButton');
+                const deleteModal = document.getElementById('deleteModal');
+                const cancelModalButton = document.querySelector('#deleteModal .btn-secondary');
+
+                deleteButton.addEventListener('click', (event) => {
+                    event.preventDefault(); // Prevent the default action of the link
+                    deleteModal.style.display = 'block';
+                });
+
+                cancelModalButton.addEventListener('click', (event) => {
+                    event.preventDefault();
+                    deleteModal.style.display = 'none';
+                });
+            </script>
         </div>
     </section>
 {% endblock %}
