--- a/web-apps/templates/playlister/playlist.html
+++ b/web-apps/templates/playlister/playlist.html
@@ -14,8 +14,10 @@
                     <img src="{{ image }}" alt="Cover Image: {{ name }}" height="400" width="400">
                 {% endif %}
                 <div class="d-flex w-25">
-                    <a href="#" class="btn btn-outline-info flex-fill m-3">Edit</a>
-                    <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-outline-danger flex-fill m-3">
+                    {% if owner == username %}
+                        <a href="{{ url_for('edit_playlist', playlist=name, id=id) }}" class="btn btn-outline-info flex-fill m-3">Edit</a>
+                    {% endif %}
+                    <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-outline-danger flex-fill m-3" data-bs-target="#deleteModal" data-bs-toggle="modal">
                         {% if owner == username %}
                             Delete
                         {% else %}
@@ -25,28 +27,88 @@
                 </div>
                 <!-- SIZE DEPENDS ON DEVICE; DESIGN FOR MOBILE -->
                 <h3 class="mb-3">{{ name }}</h3>
-                <h5 class="mb-3">{{ description }}</h5>
+                <h5 class="mb-3" id="desc">{{ description }}</h5>
+                <!-- JavaScript to handle embedded HTML and links for above h5 element; NEEDS WORK -->
+                <!-- <script>
+                    // Get the description element by ID
+                    const description = document.getElementById('desc').innerHTML;
+
+                    function convertLinksToAnchors(text) {
+                        const urlRegex = /(((https?:\/\/)|(www\.))[^\s]+)/g;
+                        return text.replace(urlRegex, (url) => {
+                        if (url.startsWith("http")) {
+                            return `<a href='${url}' target='_blank'>${url}</a>`;
+                        } else {
+                            return `<a href='https://${url}' target='_blank'>${url}</a>`;
+                        }
+                    });
+                    }
+                    const parsedDesc = convertLinksToAnchors(description);
+
+                    function renderHTMLElements(text) {
+                        const desc = document.createElement('h5');
+                        desc.innerHTML = text;
+                        return desc.textContent;
+                    }
+                    const finalDesc = renderHTMLElements(parsedDesc);
+
+                    document.getElementById('desc').innerHTML = finalDesc;
+                </script> -->
             </div>
             <div class="w-100">
                 <hr class="my-hr">
             </div>
             {% if not all_tracks %}
                 <div class="d-flex justify-content-center w-25">
-                    <a class="btn btn-light " href="#">Add to this playlist</a>
+                    <a class="btn btn-light" href="#">Add to this playlist</a>
                 </div>
             {% else %}
-                <div class="d-flex w-25"></div>
-                    <ol id="songs">
-                        {% for track in all_tracks: %}
-                        <li>{{ track['track_name'] }}</li>
-                        <ul>
-                            <li>{{ track['artist_name'] }}</li>
-                            <li>{{ track['track_album_cover'] }}</li>
-                        </ul>
-                        {% endfor %}
-                    </ol>
+                <div class="d-flex flex-column w-50">
+                    {% for track in all_tracks %}
+                        <div class="d-flex flex-row" id="songs">
+                            <img class="d-inline py-2 pe-3" src="{{ track['track_album_cover'] }}" alt="{{ track['track_name'] }} Album Cover">
+                            <div class="d-flex flex-column justify-content-center">
+                                <div class="d-block">{{ track['track_name'] }}</div>
+                                <div class="d-block" id="artist">{{ track['artist_name'] }}</div>
+                            </div>
+                        </div>
+                        <hr>
+                    {% endfor %}
                 </div>
             {% endif %}
+            <!-- 'Delete playlist' modal -->
+            <div aria-hidden="true" aria-labelledby="confirmation" class="modal fade" id="deleteModal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="confirmation">Confirmation</h1>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure you want to delete this playlist?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-danger">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- JavaScript to show the modal -->
+            <script>
+                const deleteButton = document.getElementById('deleteButton');
+                const deleteModal = document.getElementById('deleteModal');
+                const cancelModalButton = document.querySelector('#deleteModal .btn-secondary');
+
+                deleteButton.addEventListener('click', (event) => {
+                    event.preventDefault(); // Prevent the default action of the link
+                    deleteModal.style.display = 'block';
+                });
+
+                cancelModalButton.addEventListener('click', (event) => {
+                    event.preventDefault();
+                    deleteModal.style.display = 'none';
+                });
+            </script>
         </div>
     </section>
 {% endblock %}
