Add JavaScript file; Fixed edit functionality

--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -28,6 +28,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='playlister/images/playlister_logo.svg') }}">
 
+    <!-- Custom JavaScript -->
+    <script src="{{ url_for('static', filename='playlister/app.js') }}"></script>
+
     <title>{% block title %}{% endblock %}</title>
 </head>
  
