--- a/web-apps/templates/playlister/edit_playlist.html
+++ b/web-apps/templates/playlister/edit_playlist.html
@@ -7,13 +7,12 @@
 {% block main %}
     <section>
         <div class="container-fluid d-flex flex-column align-items-center">
-            <form action="/playlister/edit_playlist" class="d-inline-flex flex-column justify-content-center align-items-center w-100" method="POST">
+            <form action="/playlister/edit/{{ name }}:{{ id }}" class="d-inline-flex flex-column justify-content-center align-items-center w-100" id="formPUT" method="POST">
                 <div class="d-inline-flex flex-column justify-content-center align-items-center w-50">
                     <div class="d-flex w-25">
-                        <!-- MAKE CANCEL BUTTON A MODAL -->
                         <!-- MAKE CANCEL/SAVE STICK TO TOP -->
                         <a class="btn btn-outline-danger flex-fill m-3" href="{{ url_for('playlister_playlist', playlist=name, id=id) }}">Cancel</a>
-                        <button class="btn btn-outline-info flex-fill m-3" type="submit">Save</button>
+                        <button class="btn btn-outline-info flex-fill m-3" data-bs-target="#saveModal" data-bs-toggle="modal" type="button">Save</button>
                     </div>
                     {% if has_image == False %}
                         <img src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Cover Image" height="400" width="400">
@@ -42,7 +41,7 @@
                     <div class="d-flex flex-column w-50">
                         <div class="d-flex flex-row my-4">
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch" id="selectAll" onchange="select_all()">
+                                <input class="form-check-input" type="checkbox" role="switch" id="selectAll">
                                 <label class="form-check-label" for="selectAll">Select All</label>
                             </div>
                         </div>
@@ -62,49 +61,28 @@
                         {% endfor %}
                     </div>
                 {% endif %}
-            </form>
-            <!-- 'Delete playlist' modal -->
-            <div aria-hidden="true" aria-labelledby="confirmation" class="modal fade" id="deleteModal" tabindex="-1">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="confirmation">Confirmation</h1>
-                        </div>
-                        <div class="modal-body">
-                            <p>Are you sure you want to delete this playlist?</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-danger">Delete</a>
+                <!-- 'Save changes' modal -->
+                <div aria-hidden="true" aria-labelledby="saveConfirmation" class="modal fade" id="saveModal" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="saveConfirmation">Confirmation</h1>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are you sure you want to save these changes?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button class="btn btn-outline-info" type="submit">Save</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- JavaScript for Bootstrap modals -->
-            <script>
-                const deleteButton = document.getElementById('deleteButton');
-                const deleteModal = document.getElementById('deleteModal');
-                const cancelModalButton = document.querySelector('#deleteModal .btn-secondary');
-
-                deleteButton.addEventListener('click', (event) => {
-                    event.preventDefault(); // Prevent the default action of the link
-                    deleteModal.style.display = 'block';
-                });
-
-                cancelModalButton.addEventListener('click', (event) => {
-                    event.preventDefault();
-                    deleteModal.style.display = 'none';
-                });
-
-                // JS for 'selectAll' checkbox
-                function select_all() {
-                    var select_all = document.getElementById('selectAll');
-                    var checkboxes = document.querySelectorAll('input[type="checkbox"]');
-                    for (var i = 0; i < checkboxes.length; i++) {
-                        checkboxes[i].checked = select_all.checked;
-                    }
-                };
-            </script>
+                <!-- Location to send JS array to grab in app.py -->
+                <div style="position: absolute; visibility: hidden;">
+                    <input id="hiddenList" name="selectedIds" value="">
+                </div>
+            </form>
         </div>
     </section>
 {% endblock %}
