--- a/web-apps/templates/playlister/playlist.html
+++ b/web-apps/templates/playlister/playlist.html
@@ -17,13 +17,13 @@
                     {% if owner == username %}
                         <a href="{{ url_for('edit_playlist', playlist=name, id=id) }}" class="btn btn-outline-info flex-fill m-3">Edit</a>
                     {% endif %}
-                    <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-outline-danger flex-fill m-3" data-bs-target="#deleteModal" data-bs-toggle="modal">
+                    <button class="btn btn-outline-danger flex-fill m-3" data-bs-target="#deleteModal" data-bs-toggle="modal" type="button">
                         {% if owner == username %}
                             Delete
                         {% else %}
                             Unfollow
                         {% endif %}
-                    </a>
+                    </button>
                 </div>
                 <!-- SIZE DEPENDS ON DEVICE; DESIGN FOR MOBILE -->
                 <h3 class="mb-3">{{ name }}</h3>
@@ -77,11 +77,11 @@
                 </div>
             {% endif %}
             <!-- 'Delete playlist' modal -->
-            <div aria-hidden="true" aria-labelledby="confirmation" class="modal fade" id="deleteModal" tabindex="-1">
+            <div aria-hidden="true" aria-labelledby="deleteConfirmation" class="modal fade" id="deleteModal" tabindex="-1">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="confirmation">Confirmation</h1>
+                            <h1 class="modal-title fs-5" id="deleteConfirmation">Confirmation</h1>
                         </div>
                         <div class="modal-body">
                             <p>Are you sure you want to delete this playlist?</p>
@@ -93,22 +93,6 @@
                     </div>
                 </div>
             </div>
-            <!-- JavaScript to show the modal -->
-            <script>
-                const deleteButton = document.getElementById('deleteButton');
-                const deleteModal = document.getElementById('deleteModal');
-                const cancelModalButton = document.querySelector('#deleteModal .btn-secondary');
-
-                deleteButton.addEventListener('click', (event) => {
-                    event.preventDefault(); // Prevent the default action of the link
-                    deleteModal.style.display = 'block';
-                });
-
-                cancelModalButton.addEventListener('click', (event) => {
-                    event.preventDefault();
-                    deleteModal.style.display = 'none';
-                });
-            </script>
         </div>
     </section>
 {% endblock %}
