--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -21,6 +21,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/092a914cad.js" crossorigin="anonymous"></script>
+    <!-- Google Search Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='playlister/styles.css') }}">
