--- a/web-apps/templates/playlister/playlist.html
+++ b/web-apps/templates/playlister/playlist.html
@@ -13,11 +13,11 @@
                 {% else %}
                     <img src="{{ image }}" alt="Cover Image: {{ name }}" height="400" width="400">
                 {% endif %}
-                <div class="d-flex w-25">
+                <div class="d-flex my-btns">
                     {% if owner == username %}
-                        <a href="{{ url_for('edit_playlist', playlist=name, id=id) }}" class="btn btn-outline-info flex-fill m-3">Edit</a>
+                        <a href="{{ url_for('edit_playlist', playlist=name, id=id) }}" class="btn btn-outline-info flex-fill m-3 my-btn">Edit</a>
                     {% endif %}
-                    <button class="btn btn-outline-danger flex-fill m-3" data-bs-target="#deleteModal" data-bs-toggle="modal" type="button">
+                    <button class="btn btn-outline-danger flex-fill m-3 my-btn" data-bs-target="#deleteModal" data-bs-toggle="modal" type="button">
                         {% if owner == username %}
                             Delete
                         {% else %}
@@ -60,7 +60,7 @@
             </div>
             {% if not all_tracks %}
                 <div class="d-flex justify-content-center w-25">
-                    <a class="btn btn-light" href="#">Add to this playlist</a>
+                    <a class="btn btn-light my-btns" href="{{ url_for('playlister_search') }}">Add to this playlist</a>
                 </div>
             {% else %}
                 <div class="d-flex flex-column w-50">
@@ -87,8 +87,8 @@
                             <p>Are you sure you want to delete this playlist?</p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-danger">Delete</a>
+                            <button type="button" class="btn btn-secondary my-btn" data-bs-dismiss="modal">Cancel</button>
+                            <a href="{{ url_for('delete_playlist', id=id) }}" class="btn btn-danger my-btn">Delete</a>
                         </div>
                     </div>
                 </div>
