--- a/web-apps/templates/playlister/search.html
+++ b/web-apps/templates/playlister/search.html
@@ -1,50 +1,64 @@
 {% extends "playlister/layout.html" %}
 
 {% block title %}
-    Edit Playlist - Playlister
+    Search - Playlister
 {% endblock %}
 
 {% block main %}
     <section>
         <div class="container-fluid d-flex flex-column align-items-center">
             <form action="/playlister/search" class="d-inline-flex flex-column justify-content-center align-items-center w-100" method="POST">
+                {% if has_image == False %}
+                    <img src="{{ url_for('static', filename='playlister/images/playlist-cover.png') }}" alt="Default Cover Image" height="400" width="400">
+                {% else %}
+                    <img src="{{ image }}" alt="Cover Image: {{ name }}" height="400" width="400">
+                {% endif %}
+                <div class="accordion w-25 mb-3" id="mainAccordion">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button aria-controls="collapseOne" aria-expanded="true" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseOne" type="button">
+                                <strong>PLEASE NOTE</strong>
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse show" data-bs-parent="#mainAccordion" id="collapseOne">
+                            <div class="accordion-body">
+                                <strong>You are adding to a playlist! The beta version only allows users to search for artists. We are working on a smoother search experience to allow for specific albums and songs.</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button aria-controls="collapseTwo" aria-expanded="false" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" type="button">
+                                <strong>HOW TO USE</strong>
+                            </button>
+                        </h2>
+                        <div class="accordion-collapse collapse" data-bs-parent="#mainAccordion" id="collapseTwo">
+                            <div class="accordion-body">
+                                <strong>1. Type in an artist's name</strong><br>
+                                <strong>2. Add albums and songs by clicking on their add buttons -> "+"</strong>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="d-inline-flex flex-column justify-content-center align-items-center w-50">
                     <div class="input-group m-3">
                         <span class="input-group-text material-symbols-outlined" id="basic-addon1">search</span>
                         <input aria-describedby="basic-addon1" aria-label="Search" class="form-control" name="search_bar" placeholder="Search" type="text">
                     </div>
                 </div>
-                <div class="w-100">
-                    <hr class="my-hr">
-                </div>
-                {% if not all_tracks %}
-                    <div class="d-flex justify-content-center w-25">
-                        <a class="btn btn-light" href="#">Add to this playlist</a>
-                    </div>
-                {% else %}
-                    <div class="d-flex flex-column w-50">
-                        <div class="d-flex flex-row my-4">
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch" id="selectAll">
-                                <label class="form-check-label" for="selectAll">Select All</label>
-                            </div>
+                <div class="d-flex flex-column w-50">
+                    <div class="d-flex flex-row" id="songs">
+                        <div class="d-flex flex-column justify-content-center form-check form-switch">
+                            <input class="form-check-input" name="track['track_id']" type="checkbox" role="switch">
                         </div>
-                        <hr>
-                        {% for track in all_tracks %}
-                            <div class="d-flex flex-row" id="songs">
-                                <div class="d-flex flex-column justify-content-center form-check form-switch">
-                                    <input class="form-check-input" name="{{ track['track_id'] }}" type="checkbox" role="switch">
-                                </div>
-                                <img class="d-inline py-2 pe-3" src="{{ track['track_album_cover'] }}" alt="{{ track['track_name'] }} Album Cover">
-                                <div class="d-flex flex-column justify-content-center">
-                                    <div class="d-block">{{ track['track_name'] }}</div>
-                                    <div class="d-block" id="artist">{{ track['artist_name'] }}</div>
-                                </div>
-                            </div>
-                            <hr>
-                        {% endfor %}
+                        <img class="d-inline py-2 pe-3" src="track['track_album_cover']" alt="track['track_name'] Album Cover">
+                        <div class="d-flex flex-column justify-content-center">
+                            <div class="d-block">track['track_name']</div>
+                            <div class="d-block" id="artist">track['artist_name']</div>
+                        </div>
                     </div>
-                {% endif %}
+                    <hr>
+                </div>
             </form>
         </div>
     </section>
