Add final touches; Fix bugs; Field test

--- a/web-apps/templates/playlister/create_playlist.html
+++ b/web-apps/templates/playlister/create_playlist.html
@@ -15,7 +15,7 @@
             <label for="inputDescription">Description</label>
         </div>
         <div class="d-flex flex-column mb-3">
-            <input autocomplete="off" checked class="btn-check" id="option1" name="public" type="checkbox">
+            <input autocomplete="off" class="btn-check" id="option1" name="public" type="checkbox">
             <label class="btn btn-outline-light m-3" for="option1">Public</label>
 
             <input autocomplete="off" class="btn-check" id="option3" name="collaborative" type="checkbox">
