--- a/web-apps/templates/playlister/index.html
+++ b/web-apps/templates/playlister/index.html
@@ -32,4 +32,14 @@
             {% endfor %}
         </div>
     </section>
+    <!-- Page refresh script -->
+    <!-- <script>
+        function reloadIt() {
+            if (window.location.href.substr(-2) !== "?r") {
+                window.location = window.location.href + "?r";
+            }
+        }
+
+        setTimeout('reloadIt()', 100);
+    </script> -->
 {% endblock %}
