--- a/web-apps/templates/playlister/layout.html
+++ b/web-apps/templates/playlister/layout.html
@@ -53,9 +53,11 @@
 
     {% if get_flashed_messages() %}
     <header>
-        <div class="alert alert-primary mb-0 text-center" role="alert">
-            {{ get_flashed_messages() | join(" ") }}
-        </div>
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-danger mb-2 text-center" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
     </header>
     {% endif %}
 
