--- a/web-apps/templates/playlister/sign_in.html
+++ b/web-apps/templates/playlister/sign_in.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <section>
-    <div class="container-fluid h-100">
+    <div class="container-fluid">
         <a class="btn btn-lg btn-outline-info m-5" href="{{ auth_url }}">Sign In</a>
     </div>
 </section>
